themes/startwords/assets/scss/_darkmode.scss
.darkmode {
    main {
        background-color: $dark-grey;
        color: $off-white;

        a, a:visited {
            color: $off-white;  /* or maybe light purple and white only for article heading links? */
        }
    }

    > footer {
        background-color: $dark-grey;
    }

    article {
        .theme {
            color: $light-purple;
        }
    }



}

body.article.darkmode .footnotes ol li {
    background: $light-grey;
    color: $dark-grey;

    a, a:visited {
        color: $dark-purple;

        &.footnote-backref {
            color: transparent;
        }
    }
}

body.article.darkmode .footnotes.endnotes ol li {
    background-color: $dark-grey !important;
    color: $off-white !important;

    a, a:visited {
        color: $light-purple;
    }

}

body.article.darkmode article header .number {
    a, a:visited {
        color: $off-white;
    }
}

/* TODO: override focus color to be off-white? */

